# iCubInterfaceGui

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/iCubInterfaceGui/: CMakeLists.txt
iCubInterfaceGuiClient/: CMakeLists.txt
iCubInterfaceGuiLib/: CMakeLists.txt
